@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 3



class Company{

}

class Coordinator{

}

class Nurse {


}

class Receptionist{

}

class Administrator{

}


class Employee{
    -name
    -phoneNumber
    -emailAddress
}

class VaccinationCenter {
    -name
    -address
    -phoneNumber
    -emailAddress
    -faxNumber
    -websiteAddress
    -openingHours
    -closingHours
    -slotDuration
    -maxNumVaxPerSlot
    -capacity

}

class Schedule{
    -dateTime
}

class SNSUser {
    -snsNumber
    -name
    -age
    -phoneNum
    -email
}

class UserVaccines{



}

class VaccineType{
    -disease

}

class Vaccine{
    -name
    -lotNum
}


class VaccinationProcess{
    -recoveryPeriod
}

class AgeGroup{
    -minAge
    -maxAge
}
class Dose{
    -doseNumber
    -dosage
}

class TimeInterval{
    -numDays
}

Company "1" -- "*" Employee: has >
Company "1" -- "*" SNSUser: has >
Company "1" -- "*" VaccineType: has >
Company "1" -- "*" Vaccine: has >
Company "1" -- "*" VaccinationCenter: has >

Employee "1" -- "1" Nurse: is <
Employee "1" -- "1" Receptionist: is <
Employee "1" -- "1" Coordinator: is <
Administrator "1" -- "*" Employee: Manages >

Employee "*" -- "*" VaccinationCenter: has <

Nurse "*" -- "1" VaccinationProcess: updates >
Nurse "1" -- "*" UserVaccines: updates >

Receptionist "1" -- "1" WaitingRoom: updates >
WaitingRoom "1" -- "*" SNSUser: has >

Vaccine "1" -- "1" VaccinationProcess: has >
Vaccine "*" -- "1" VaccineType: has >
VaccinationProcess "1" -- "*" AgeGroup: has >
AgeGroup "1" -- "*" Dose: has >
(AgeGroup, Dose) .. TimeInterval


VaccinationCenter "1" -- "1" WaitingRoom: has >
VaccinationCenter "1" -- "1" Coordinator: has >

Coordinator "1" -- "*" VaccinationProcess: monitors >

Receptionist "1" -- "*" Schedule: creates >


Schedule "*" -- "1" VaccinationCenter: has <
Schedule "*" -- "1" VaccineType: has >

SNSUser "1" -- "*" Schedule: creates >
SNSUser "1" -- "*" UserVaccines: has >

Administrator "1" -- "*" VaccinationCenter: manages >
Administrator "1" -- "*" SNSUser: registers >
Administrator "1" -- "*" Vaccine: manages >
Administrator "1" -- "*" VaccineType: manages >


@enduml